@@ -18,7 +18,6 @@ o better looking graphs in 3D in the R interface
 Other bits:
 
 o diameter returns the actual diameter
-o 'to' argument for get.shortest.paths
 o farthest points
 o eccentricity
 
