@@ -1,0 +1,2 @@
+diameter: 9, from 0 to 9
+ 0 1 2 3 4 5 6 7 8 9
